Make an initial fix for the menu on small devices, and make the footer a little nicer, too.

--- a/jekyll/_sass/_base.scss
+++ b/jekyll/_sass/_base.scss
@@ -205,14 +205,13 @@ pre {
     margin-left: auto;
     padding-right: $spacing-unit;
     padding-left: $spacing-unit + 320px;
-    @extend %clearfix;
 
-    @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+    @include media-width(800px) {
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
+
+    @extend %clearfix;
 }
 
 
